methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:38: error: not enough arguments for method dessineLigne1: (n: Int)Int.
Unspecified value parameter n.
    case 2 => dessineLigne1(); return (n+1)
                           ^FlowerPot:38: error: method dessineLigne has return statement; needs result type
    case 2 => dessineLigne1(); return (n+1)
                               ^